@@ -23,6 +23,11 @@
   terminal tabs; the shortcut defaults to Alt+#.
 - The terminal tab close button is now properly rendered with Gtk+ themes
   based on the "pixmap" engine.
+- The "Use colors from system theme" option was removed, as it was mostly
+  unusued and its really not a required option after all (nearly no Gtk+
+  theme specifies colors for VteTerminal anyways).
+- You can now scroll up/down by one line using Shift+Up and Shift+Down, in
+  the same manner as in aterm.
 - New translations: Dwayne Bailey (en_GB), Hydonsingore Sie (zh_TW)
 
 
